--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "build": "yarn tsc -p ."
   },
   "dependencies": {
+    "codechain-keystore-cli": "^0.7.0",
     "codechain-sdk": "^1.2.1"
   },
   "devDependencies": {
